# DeepFlow

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  zeabur.yaml
agent/: .env.example  Dockerfile  main.py  pyproject.toml
agent/scripts/: evaluate_extended.py  evaluate_prompt.py  extended_evaluation_results.json  optimize_extended.py  optimize_hrpo.py  optimize_with_opik.py  optimized_prompt.json  optimized_prompt_extended.json  run_email_poller.py  run_evaluation.py  run_slack_bot.py  run_telegram_bot.py  test_agent_flow.py  test_llm.py  test_opik.py  test_optimized_prompt.py  test_react_agent.py
agent/src/deepflow_agent/: __init__.py  config.py  memory.py  tracer.py
agent/src/deepflow_agent/agents/: __init__.py  auto_negotiator.py  react_agent.py  semantic_gateway.py
agent/src/deepflow_agent/integrations/: __init__.py  email_poller.py  slack_bot.py  telegram_bot.py
agent/src/deepflow_agent/metrics/: __init__.py  custom_metrics.py
agent/src/deepflow_agent/models/: __init__.py  task.py
agent/src/deepflow_agent/prompts/: __init__.py  auto_negotiator.py  semantic_gateway.py
agent/src/deepflow_agent/tools/: __init__.py  add_to_queue.py  base.py  (+5 more)
agent/tests/: conftest.py  test_agents.py  test_metrics.py
agent/tests/fixtures/: golden_dataset.json  golden_dataset_extended.json
backend/: .env.example  Dockerfile  docker-compose.yml  main.py  pyproject.toml
backend/src/deepflow_backend/: __init__.py  config.py  deps.py  main.py  schemas.py
backend/tests/: conftest.py  test_api.py  test_priority_engine.py  test_schemas.py
(+40 files in other folders)
